| Bug #25554 | Master failure during NR can lead to resource leak, causing later failure | ||
|---|---|---|---|
| Submitted: | 11 Jan 2007 20:41 | Modified: | 25 Jan 2007 6:06 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1, 5.0, 5.1 | OS: | |
| Assigned to: | Jonas Oreland | Target Version: | |
[11 Jan 2007 20:41]
Jonas Oreland
[11 Jan 2007 20:47]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/17980 ChangeSet@1.2088, 2007-01-11 20:46:18+01:00, jonas@perch.ndb.mysql.com +4 -0 ndb - bug#25554 fix a master failure during nr bug
[11 Jan 2007 20:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/17981 ChangeSet@1.2282, 2007-01-11 20:51:16+01:00, jonas@perch.ndb.mysql.com +4 -0 ndb - bug#25554 fix bug when master failure during nr (recommit against 5.0)
[11 Jan 2007 21:22]
Jonas Oreland
pushed to 5.0-ndb, wont be fixed in 4.1
[11 Jan 2007 21:25]
Jonas Oreland
pushed to 5.1-ndb
[24 Jan 2007 3:06]
Tomas Ulin
pushed to 5.1.15
[24 Jan 2007 8:54]
Tomas Ulin
pushed to 5.0.36
[25 Jan 2007 6:06]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.0.36 and 5.1.15 changelogs.
