ndb - bug#25554   fix bug when master failure during nr   (recommit against 5.0)